# vqmpt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docker/: pytorch.dockerfile
src/vqmpt/: utils.py
src/vqmpt/modules/: autoregressive.py  context_encoder.py  decoder.py  encoder.py  env_encoder.py  quantizer.py  sublayers.py
